# MediAssist-RAG_AutoML

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONSTITUTION.md  Dockerfile  IMPLEMENTATION.md  Makefile  PLAN.md  README.md  RENDER_DEPLOY.md  SPECIFICATION.md  TASKS.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
common/: database.py
common/models/: __init__.py  analysis.py  automl.py  patient.py  user.py
common/schemas/: __init__.py  analysis.py
common/utils/: __init__.py  security.py
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  Dockerfile.render  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
k8s/base/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
k8s/monitoring/: prometheus.yaml
models/automl/: __init__.py  config.py  search_space.py  trainer.py
models/image_analyzer/: __init__.py  gradcam.py  model.py
models/risk_predictor/: __init__.py  model.py
models/rna_predictor/: __init__.py  config.py  model.py  tokenizer.py  trainer.py
models/symptom_classifier/: __init__.py  classifier.py  ner.py  trainer.py
rag/: __init__.py  medical_rag.py
rag/embedding/: __init__.py  embedder.py
rag/generation/: __init__.py  generator.py
rag/ingestion/: __init__.py  parser.py  pubmed.py
rag/reranking/: reranker.py
rag/retrieval/: hybrid.py
scripts/: run_tests.sh  setup_dev.sh  train_rna.py
test_data/: sample_literature.json  sample_rna.fasta  sample_rna_sequences.json  sample_symptoms.json
tests/: conftest.py  test_automl.py  test_rna_predictor.py  test_symptom_classifier.py
(+61 files in other folders)
